-Apply issue on mobile

--- a/src/component/css/Model.css
+++ b/src/component/css/Model.css
@@ -26,6 +26,7 @@
   text-align: center;
   position: relative;
   z-index: 100000;
+  touch-action: manipulation;
 }
 
 /* =========================
